app/assets/styles/global/_inpage.scss
/* ==========================================================================
   Global: Inpage
   ========================================================================== */

.inpage__header {
  padding: ($global-spacing * 2) 0;

  > .inner {
    @extend .row, .row--centered;
  }
}

.inpage__attribution,
.inpage__headline,
.inpage__body .prose {
  @include column(12/12);
  max-width: 48rem;

  > *:last-child {
    margin-bottom: 0;
  }
}

.inpage__attribution {
  position: relative;
  font-style: normal;
  padding: 0 0 ($global-spacing / 2) 0;
  box-shadow: 0 1px 0 0 rgba($base-color, 0.08);
  overflow: hidden;

  small {
    @extend .heading-alt;
    position: relative;
    color: rgba($base-font-color, 0.64);
    font-size: 0.875rem;
    line-height: 1.25rem;
    display: block;
  }

  span {
    font-size: 1.25rem;
    line-height: 1.75rem;
    font-weight: $base-font-bold;
  }

  a {
    color: inherit;
  }

  strong {
    display: inline-block;
    vertical-align: top;
  }

  img {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translate(0, -50%);
    width: auto;
    max-height: 2rem;
    margin-top: -0.25rem;
  }
}

.inpage__headline {
  &::after {
    content: '';
    width: 2rem;
    height: 1px;
    background: $base-font-color;
    display: block;
    margin: 0.75rem 0 0 0;
  }
}

.inpage__title {
  @extend .heading, .heading--xlarge;
}

.inpage__subtitle {
  position: relative;
  @extend .heading-alt;
  color: rgba($base-font-color, 0.64);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin: 0;
}

.inpage__body {
  > .inner {
    @extend .row;

    > *:last-child {
      margin-bottom: 0;
    }
  }
}

